# clinic-tracker

./: .gitignore
.github/workflows/: deploy-frontend.yml  test-backend.yml
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_03_09_create_users_table.py  2fb3e502b7e2_fix_supervisor_assignments_student_id_.py  54cb65f22443_add_departments_and_task_categories_.py  7dcb280f0461_add_student_rotations_and_case_.py  89b866e8aacc_add_supervisor_assignments_table.py  9d81710b9cee_add_notifications_and_audit_logs_tables.py
backend/app/: main.py
backend/app/api/: assignments.py  audit.py  auth.py  dashboard.py  departments.py  dependencies.py  notifications.py  rotations.py  submissions.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  assignment.py  audit_log.py  department.py  notification.py  rotation.py  submission.py  user.py
backend/app/schemas/: assignment.py  audit.py  dashboard.py  department.py  error.py  notification.py  rotation.py  submission.py  user.py
backend/app/scripts/: seed_admin.py  update_admin_email.py
backend/app/utils/: audit.py  email.py  storage.py
backend/tests/: conftest.py  factories.py  test_auth.py  test_config.py  test_dashboard.py  test_database.py  test_main.py  test_submissions.py
frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx
frontend/src/__tests__/: CaseInputForm.test.tsx  Login.test.tsx  StudentDashboard.test.tsx
(+45 files in other folders)
